spacing correction

--- a/src/style/hero-section/style.css
+++ b/src/style/hero-section/style.css
@@ -9,18 +9,14 @@
 }
 .hero-text-container {
   display: flex;
-  width: 50%;
   flex-direction: column;
 }
 .hero-display-text{
-  width: 67%;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 .hero-body-text {
-  width: 79%;
   display: flex;
   flex-direction: column;
-  padding-bottom: 32px;
 }
